--- a/recipes/borscht.html
+++ b/recipes/borscht.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Borscht</h1>
+        <img src="../images/borscht_img.jpeg" alt="Borscht" width="500">
     </body>
 </html>
