Added description and ingredients section w/ unorderel list

--- a/recipes/borscht.html
+++ b/recipes/borscht.html
@@ -6,5 +6,24 @@
     <body>
         <h1>Borscht</h1>
         <img src="../images/borscht_img.jpeg" alt="Borscht" width="500">
+        <p>Borsch is the famous soup in many Ukrainian families, as well as many Eastern and Central European countries. 
+            The recipes of borsch vary, but vegetables (mainly beet) and sour cream are always the main ingredients. 
+            The beetroot used in cooking borsch gives the soup its trademark deep reddish-purple color.
+        </p>
+        <h4><em>Ingredients:</em></h4>
+            <ul>
+                <li>4 qt. water</li>
+                <li>14 oz. beef stock</li>
+                <li>1 small head of cabbage</li>
+                <li>5 large potatoes</li>
+                <li>1 large carrot</li>
+                <li>1 med. beet root</li>
+                <li>1 med. onion</li>
+                <li>1 bay leaf</li>
+                <li>2 tablespoons tomato paste</li>
+                <li>3-5 cloves garlic</li>
+                <li>verdure (parsley, dill, etc.)</li>
+                <li>sour cream</li>
+            </ul>
     </body>
 </html>
