Added steps section w/ ordered list

--- a/recipes/borscht.html
+++ b/recipes/borscht.html
@@ -25,5 +25,18 @@
                 <li>verdure (parsley, dill, etc.)</li>
                 <li>sour cream</li>
             </ul>
+        <h4><em>Steps:</em></h4>
+            <ol>
+                <li>Boil the beef stock for at least 1.5 hours, strain the broth through clothing, separate the meat from the bone and carve it.</li>
+                <li>Peel the raw beet root, cut it in thin two-inch strips and stew for half an hour.</li>
+                <li>Add cubed potatoes in the boiling broth. Add the stewed beet when the broth begins to boil again. Add bay leaf.</li>
+                <li>Cut the carrot the same way as the beet root, fry it all over and add into borsch.</li>
+                <li>Slice the onion, fry on both sides, add tomato paste. Mix everything and fry for some more time.</li>
+                <li>Take the fried onion off the stove and add mashed garlic.</li>
+                <li>Shred the cabbage finely and add (but not much) into borsch when the potato is almost cooked.</li>
+                <li>Cover the saucepan and boil borscht for 5 minutes. Then add fried onion with garlic and seasonings. Mix everything.</li>
+                <li>Cover borsch and cook for 3 more minutes. Then add cut verdure.</li>
+                <li>Take borsch off the stove and leave uncovered.</li> 
+            </ol>
     </body>
 </html>
