Changed the image name

--- a/recipes/borscht.html
+++ b/recipes/borscht.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Borscht</h1>
-        <img src="../images/borscht_img.jpeg" alt="Borscht" width="500">
+        <img src="../images/borscht.jpeg" alt="Borscht" width="500">
         <p>Borsch is the famous soup in many Ukrainian families, as well as many Eastern and Central European countries. 
             The recipes of borsch vary, but vegetables (mainly beet) and sour cream are always the main ingredients. 
             The beetroot used in cooking borsch gives the soup its trademark deep reddish-purple color.
