--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/borscht.html">borscht</a>
+        <a href="recipes/borscht.html">Borscht</a>
     </body>
 </html>
