Added the reference link to the crepes recipe

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/borscht.html">Borscht</a>
+        <a href="recipes/crepes.html">Crepes</a>
     </body>
 </html>
