Added the ingredients section

--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -6,6 +6,22 @@
     <body>
         <h1>Crepes</h1>
         <img src="../images/crepes.webp" alt="Crepes" width="500">
+        <p>Crepes are probably our favorite quick and easy sweet breakfast treat. 
+            They come together faster than pancakes or waffles, and unlike those two other breakfast treats, 
+            crepes are begging to be topped with more than just maple syrup. Fruit, nutella, gruyere cheese and mushroom 
+            gravy are just some of the amazing topping options at your finger tips. 
+        </p>
+        <h4><em>Ingredients:</em></h4>
+        <ul>
+            <li>1 c. all-purpose flour</li>
+            <li>2 large eggs</li>
+            <li>1 tbsp. granulated sugar</li>
+            <li>1/4 tsp. kosher salt</li>
+            <li>1 1/2 c. whole milk</li>
+            <li>1 tbsp. butter</li>
+            <li>Fresh fruit, for serving</li>
+            <li>Powdered sugar, for serving</li>
+        </ul>
 
     </body>
 </html>
