Added the steps section w/ ordered list

--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -22,6 +22,13 @@
             <li>Fresh fruit, for serving</li>
             <li>Powdered sugar, for serving</li>
         </ul>
-
+        <h4><em>Steps:</em></h4>
+        <ol>
+            <li>In a large mixing bowl whisk the flour, sugar and salt until combined. Then create a well with flour and add the eggs. 
+                Gradually pour in milk, whisking to combine after each addition. Let batter stand at room temperature until slightly bubbly on top, 15 to 20 minutes.</li>
+            <li>In a small skillet over medium heat, melt butter. About 1/4 cup at a time, drop batter evenly onto pan, swirling it to evenly coat.</li>
+            <li>Cook 2 minutes, then flip and cook 1 minute more. Repeat with remaining batter. </li>
+            <li>Serve crêpes warm with fresh fruit and powdered sugar.</li>
+        </ol>
     </body>
 </html>
