--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/borscht.html">Borscht</a>
         <a href="recipes/crepes.html">Crepes</a>
+        <a href="recipes/applepie.html">Apple pie</a>
     </body>
 </html>
