--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -6,5 +6,23 @@
     <body>
         <h1>Apple pie</h1>
         <img src="../images/applepie.jpeg" alt="Apple pie" width="500">
+        <p>A basic apple pie recipe is simple and the end results are just plain tasty. 
+            It's a recipe that everyone should have in their collection. This apple pie doesn’t use a lot of 
+            added sugar and you don’t have to cook the apples before adding them to the crust.</p>
+        <h4><em>Ingredients:</em></h4>
+        <ul>
+            <li>Dough for double-crust pie</li>
+            <li>1/3 cup sugar</li>
+            <li>1/3 cup packed brown sugar</li>
+            <li>1/4 cup all-purpose flour</li>
+            <li>1 teaspoon ground cinnamon</li>
+            <li>1/4 teaspoon ground ginger</li>
+            <li>1/4 teaspoon ground nutmeg</li>
+            <li>6 to 7 cups thinly sliced peeled tart apples</li>
+            <li>1 tablespoon lemon juice</li>
+            <li>1 tablespoon butter</li>
+            <li>1 large egg white</li>
+        </ul>
     </body>
+    
 </html>
