Added the steps section for the recipe

--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -23,6 +23,17 @@
             <li>1 tablespoon butter</li>
             <li>1 large egg white</li>
         </ul>
+        <h4><em>Steps:</em></h4>
+        <ol>
+            <li>Preheat oven to 375°. On a lightly floured surface, roll half of the dough to a 1/8-in.-thick circle; 
+                transfer to a 9-in. pie plate. In a small bowl, combine sugars, flour and spices. In a large bowl, toss apples with lemon juice. 
+                Add sugar mixture; toss to coat. Add filling; dot with butter.</li>
+            <li>Roll remaining dough to a 1/8-in.-thick circle. Place over filling. Trim, seal and flute edge. Cut slits in top. 
+                Beat egg white until foamy; brush over crust. If desired, 
+                sprinkle with turbinado sugar and ground cinnamon. Cover edge loosely with foil.</li>
+            <li>Bake 25 minutes. Remove foil; bake until crust is golden brown and filling is bubbly, 20-25 minutes longer. 
+                Cool on a wire rack. If desired, serve with ice cream and caramel sauce.</li>
+        </ol>
     </body>
     
 </html>
