--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/borscht.html">Borscht</a>
-        <a href="recipes/crepes.html">Crepes</a>
-        <a href="recipes/applepie.html">Apple pie</a>
+        <ul>
+            <li><a href="recipes/borscht.html">Borscht</a></li>
+            <li><a href="recipes/crepes.html">Crepes</a></li>
+            <li><a href="recipes/applepie.html">Apple pie</a></li>
+        </ul>   
     </body>
 </html>
